...
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvAutoCompressionLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:labelFor="@+id/switchAutoCompression"
                                android:text="@string/auto_compression_toggle"
                                android:textAppearance="@style/TextAppearance.App.Label" />

                            <TextView
                                android:id="@+id/tvAutoCompressionDescription"
                                android:layout_width="match_parent"
...
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvSaveModeLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:labelFor="@+id/switchSaveMode"
                                android:text="@string/save_mode_toggle"
                                android:textAppearance="@style/TextAppearance.App.Label" />

                            <TextView
                                android:id="@+id/tvSaveModeDescription"
                                android:layout_width="match_parent"
...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_l"
                        android:baselineAligned="false"
                        app:selectionRequired="true"
                        app:singleSelection="true">
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/rbQualityLow"
                            style="@style/Widget.App.ToggleButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:text="Низкое&#10;60%" />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/rbQualityMedium"
                            style="@style/Widget.App.ToggleButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:text="Среднее&#10;70%" />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/rbQualityHigh"
                            style="@style/Widget.App.ToggleButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:text="Высокое&#10;85%" />
                    </com.google.android.material.button.MaterialButtonToggleGroup>
...
